--- a/static/css/room.css
+++ b/static/css/room.css
@@ -1,13 +1,13 @@
 .player-block {
     display: flex;
-    overflow: hidden;
     justify-content: center;
+    background: #1a1a1a;
+    color: #fff;
 }
 
 .player {
     position: relative;
     background: #000;
-    box-shadow: 0 0 5px #000;
 }
 
 .player,
@@ -16,7 +16,7 @@
     width: auto;  /* scale to *at most* fit the window while preserving aspect ratio */
     height: auto;
     max-width: 100%;
-    max-height: calc(100vh - 8.2em);  /* - total height of .meta */
+    max-height: calc(100vh - 8.2em);  /* - total height of .user-header */
 }
 
 .player.has-video,
@@ -33,7 +33,6 @@ body.theatre .player,
 body.theatre .player svg,
 body.theatre .player video {
     display: block;
-    margin: 0;
     width: 100%;  /* scale to *exactly* fit the window while preserving aspect ratio */
     height: 100%;
     max-width: none;
@@ -98,6 +97,29 @@ body.hide-cursor .player.has-video[data-status="playing"] .controls,
     border-radius: 1px;
 }
 
+.player:not(.has-video) .controls {
+    left: 2em;  /* = margin of #content = half of .player:before's width */
+    right: 2em;
+}
+
+.player:not(.has-video):before {
+    left: 0;
+}
+
+.player:not(.has-video) {
+    width: 100%;
+    height: 2.5em;
+}
+
+@media (min-width: 25em) {
+    .player:not(.has-video) .status:before {
+        content: 'no video';
+        opacity: 0.5;
+        margin-right: 1em;
+        vertical-align: baseline;
+    }
+}
+
 .player .mute:before {
     content: '\f028';  /* volume-up */
 }
@@ -118,58 +140,33 @@ body.hide-cursor .player.has-video[data-status="playing"] .controls,
     content: '\f066';  /* compress */
 }
 
-.player:not(.has-video) .controls {
-    left: 2em;  /* = margin of #content = half of .player:before's width */
-    right: 2em;
-}
-
-.player:not(.has-video):before {
-    left: 0;
-}
-
-.player:not(.has-video),
-.player:not(.has-video) svg,
-.player:not(.has-video) video {
-    width: 100%;
-    height: 2.5em;
-}
-
-@media (min-width: 25em) {
-    .player:not(.has-video) .status:before {
-        content: 'no video';
-        opacity: 0.5;
-        margin-right: 1em;
-        vertical-align: baseline;
-    }
-}
-
 .edit > a:before {
     font: normal 1em FontAwesome;
     content: '\f040';  /* pencil */
 }
 
-.meta .creator:before {
+.user-header .creator:before {
     content: 'by ';
 }
 
-.meta .viewers:before {
+.user-header .viewers:before {
     font: normal 1em FontAwesome;
     content: '\f06e';  /* eye */
     margin-right: 0.5em;
 }
 
-.meta .edit {
+.user-header .edit {
     float: left;
     margin-right: 0.33em;
 }
 
-.meta form + .edit,
-.meta form + .edit + .name {
+.user-header form + .edit,
+.user-header form + .edit + .name {
     display: none;
 }
 
-.meta form input,
-.meta form button {
+.user-header form input,
+.user-header form button {
     min-height: 2.4em;  /* = 1.5 * 1.6em = h1's height */
 }
 
@@ -240,8 +237,7 @@ body.hide-cursor .player.has-video[data-status="playing"] .controls,
     z-index: 128;
     position: relative;
     flex-direction: column;
-    background: #f3f3f3;
-    box-shadow: 7px 0 10px -10px #000 inset;
+    background: #f6f6f6;
     transition: transform 0.4s ease-in-out;
 }
 
@@ -339,6 +335,8 @@ body.theatre .chat h1 {
 .player:not([data-status="playing"]) video,
 .player:not(.has-audio) .mute,
 .player:not(.has-audio) .volume,
+.player:not(.has-video) svg,
+.player:not(.has-video) video,
 .player:not(.has-video) .theatre,
 .player:not(.has-video) .fullscreen,
 .player.is-fullscreen .theatre,
