--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,13 +1,13 @@
 <nav class="center-block">
     <a href="/" class="brand">webmcast</a>
     <span class="spacer"></span>
-{{ if .User }}
+{{- if .User }}
     <span>Hi, <a href="/user/cfg">{{.User.Login}}</a>.</span>
     <a href="/user/logout">Log out</a>
-{{- else -}}
+{{- else }}
     <a href="/user/login">Log in</a>
     <a href="/user/new" class="text-button">Sign up</a>
-{{- end -}}
+{{- end }}
 </nav>
 <template id="login-form">
     <div data-tabs="login" data-modal>
