--- a/templates/user-config.html
+++ b/templates/user-config.html
@@ -9,16 +9,14 @@
     <body>
         <article id="content" data-scrollbar>
             {{ template "nav.html" . }}
-            <div class="invert-block">
-                <div class="meta center-block">
-                    <img class="avatar" src="{{.User.GravatarURL 60}}" alt="Gravatar" />
-                    <div>
-                        <h1>Hey there, {{.User.Name}}.</h1>
-                        <h2>Stream URL:
-                            <a href="/stream/{{.User.Login}}?{{.User.StreamToken}}">Publish</a>
-                         // <a href="/{{.User.Login}}">View</a>
-                         // <a href="/stream/{{.User.Login}}">Download</a></h2>
-                    </div>
+            <div class="user-header center-block">
+                <img class="avatar" src="{{.User.GravatarURL 60}}" alt="Gravatar" />
+                <div>
+                    <h1>Hey there, {{.User.Name}}.</h1>
+                    <h2>Stream URL:
+                        <a href="/stream/{{.User.Login}}?{{.User.StreamToken}}">Publish</a>
+                     // <a href="/{{.User.Login}}">View</a>
+                     // <a href="/stream/{{.User.Login}}">Download</a></h2>
                 </div>
             </div>
         {{ if not .User.Activated }}
