--- a/templates/room.html
+++ b/templates/room.html
@@ -47,7 +47,7 @@
                 <aside class="chat">
                     <h1>{{.ID}}</h1>
                     <ul class="log" data-scrollbar>
-                        <li class="empty-message">Nothing here.</li>
+                        <li class="empty-message">No messages.</li>
                     </ul>
                     <template class="message-template">
                         <li class="message">
