Limit when centered blocks can fill more space.
80em `.center-block`s look bad on, say, user config pages,
but are ok on stream pages where there are 2 columns of content
to fill all the space.

--- a/static/css/room.css
+++ b/static/css/room.css
@@ -1,3 +1,9 @@
+@media (min-width: 80em) {
+    .center-block {
+        max-width: 80em;
+    }
+}
+
 .player-block {
     display: flex;
     overflow: hidden;
