--- a/static/css/room.css
+++ b/static/css/room.css
@@ -1,5 +1,5 @@
 @media (min-width: 80em) {
-    .center-block {
+    body:not(.no-video) .center-block {
         max-width: 80em;
     }
 }
@@ -248,9 +248,26 @@ body.theatre .player video {
     transition: transform 0.4s ease-in-out;
 }
 
+body.no-video {
+    margin-right: 20em;
+}
+
+body.no-video .chat {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 20em;
+    z-index: 128;
+}
+
 @media (max-width: 50em) {
+    body.no-video {
+        margin-right: 0;
+    }
+
     .chat {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 100%;
         bottom: 0;
@@ -258,7 +275,7 @@ body.theatre .player video {
     }
 
     .chat-tab {
-        position: absolute;
+        position: fixed;
         right: 0;
         bottom: 0;
         border-top: 2em solid transparent;
@@ -270,7 +287,7 @@ body.theatre .player video {
         transform: translateX(-100%);
     }
 
-    .player:not(.is-fullscreen) .controls {
+    body.theatre .player .controls {
         padding-right: 2em;  /* +1em to move the buttons from under the tab */
     }
 }
