--- a/templates/room.html
+++ b/templates/room.html
@@ -56,6 +56,7 @@
                         </li>
                     </template>
                     <div class="offline-message">Chat offline.</div>
+                    <div class="error-message"></div>
                     <form class="login-form">
                         <input tabindex="1" type="text" class="input" placeholder="What's your name?" />
                         <button tabindex="1" type="submit">Join</button>
