Refactor the HTML5 player. Again.
Ok, well, technically it's not refactoring since
the behavior changed as well. (Controls should now appear
when being focused from the keyboard.)

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -100,15 +100,15 @@ img, svg, video, audio, canvas {
     border-bottom-width: 4px;
 }
 
-[data-markup], [data-markup-html] p {
-    white-space: pre-line;
-}
-
-[data-markup-html] + [data-markup] {
+[data-markup] + [data-markup] {
     display: none;
 }
 
-[data-markup-html] pre {
+[data-markup=""], [data-markup] p {
+    white-space: pre-line;
+}
+
+[data-markup] pre {
     overflow-x: auto;
 }
 
