--- a/templates/nav.html
+++ b/templates/nav.html
@@ -9,7 +9,7 @@
     <a href="/user/new" class="text-button">Sign up</a>
 {{- end }}
 </nav>
-<template id="login-form">
+<template id="login-form-template">
     <div data-tabs="login" data-modal>
         {{ template "form-user-login.html" }}
         {{ template "form-user-new.html" }}
