--- a/static/css/room.css
+++ b/static/css/room.css
@@ -1,24 +1,22 @@
 @media (min-width: 80em) {
-    body:not(.no-video) .center-block {
+    .center-block {
         max-width: 80em;
     }
 }
 
 .player-block {
     display: flex;
-    overflow: hidden;
-    position: relative;
     justify-content: center;
     background: #1a1a1a;
     color: #fff;
 }
 
 .player {
+    overflow: hidden;
     position: relative;
     background: #000;
 }
 
-.player,
 .player svg,
 .player video {
     width: auto;  /* scale to *at most* fit the window while preserving aspect ratio */
@@ -27,27 +25,33 @@
     max-height: calc(100vh - 3.8em);  /* - total height of nav */
 }
 
-.player.has-video,
 .player.has-video svg,
 .player.has-video video {
     min-height: 240px;
 }
 
+.player-block.theatre {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 256;
+}
+
 .player.is-fullscreen,
 .player.is-fullscreen svg,
 .player.is-fullscreen video,
-body.theatre .player-block,
-body.theatre .player,
-body.theatre .player svg,
-body.theatre .player video {
+.player-block.theatre .player,
+.player-block.theatre .player svg,
+.player-block.theatre .player video {
     width: 100%;  /* scale to *exactly* fit the window while preserving aspect ratio */
     height: 100vh;
     max-width: none;
     max-height: none;
 }
 
-.player[data-status="error"]:before,
-.player[data-status="ended"]:before {
+.player[data-status="error"]:before {
     content: '\f071';  /* exclamation-triangle */
 }
 
@@ -58,16 +62,15 @@ body.theatre .player video {
     right: 0;
     bottom: 0;
     padding: 0 0.5em;
-    background: rgba(0,0,0,0.7);  /* XXX maybe something else, like a gradient? */
+    background: rgba(0,0,0,0.7);
     transition: transform 0.3s ease-out, opacity 0.3s ease-in-out;
 }
 
-.player.has-video[data-status="playing"].hide-cursor {
+.player.has-video[data-status="playing"].hide-controls {
     cursor: none;
 }
 
-.player.has-video[data-status="playing"].hide-cursor .controls,
-.player.has-video[data-status="playing"]:not(:hover):not(:active) .controls {
+.player.has-video[data-status="playing"].hide-controls .controls:not(:hover) {
     opacity: 0;
     transform: translateY(100%);
 }
@@ -98,33 +101,25 @@ body.theatre .player video {
 .player .volume .slider {
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     bottom: 0;
     border: 1px solid #fff;
     border-radius: 1px;
 }
 
-.player:not(.has-video) .controls {
-    left: 2em;  /* = margin of #content = half of .player:before's width */
-    right: 2em;
-}
-
-.player:not(.has-video):before {
-    left: 0;
-}
-
 .player:not(.has-video) {
     width: 100%;
     height: 2.5em;
+    background: none;
 }
 
-@media (min-width: 25em) {
-    .player:not(.has-video) .status:before {
-        content: 'no video';
-        opacity: 0.5;
-        margin-right: 1em;
-        vertical-align: baseline;
-    }
+.player:not(.has-video) .controls {
+    padding: 0 3em;
+    background: none;
+}
+
+.player:not(.has-video):before {
+    left: 100%;
 }
 
 .player .mute:before {
@@ -279,7 +274,7 @@ body.no-video .chat {
         right: 0;
         bottom: 0;
         border-top: 2em solid transparent;
-        border-right: 2em solid #1a1a1a;
+        border-right: 2em solid #000;
         transition: opacity 0.4s ease-in-out;
     }
 
@@ -287,7 +282,7 @@ body.no-video .chat {
         transform: translateX(-100%);
     }
 
-    body.theatre .player .controls {
+    .player-block.theatre .player .controls {
         padding-right: 2em;  /* +1em to move the buttons from under the tab */
     }
 }
@@ -315,7 +310,7 @@ body.no-video .chat {
 
 .chat .empty-message,
 .chat .offline-message {
-    color: #777;
+    opacity: 0.5;
 }
 
 .chat .error-message {
@@ -385,15 +380,14 @@ body.no-video .chat {
 .player:not(.has-video) .fullscreen,
 .player.is-fullscreen .theatre,
 .player.is-fullscreen .fullscreen,
+.player-block.theatre .player .theatre,
+.player-block.theatre .player .fullscreen,
+.player-block:not(.theatre) .player:not(.is-fullscreen) .collapse,
+.no-fullscreen .player .fullscreen,
 .chat .empty-message:not(:only-of-type),
 .chat.online .offline-message,
 .chat.logged-in .login-form,
 .chat:not(.online) form,
-.chat:not(.logged-in) .input-form,
-body.theatre #content > :not(.player-block),
-body.theatre .player .theatre,
-body.theatre .player .fullscreen,
-body:not(.theatre) .player:not(.is-fullscreen) .collapse,
-body.no-fullscreen .player .fullscreen {
+.chat:not(.logged-in) .input-form {
     display: none !important;
 }
