Always run in joint mode.
Also, use server-side redirects to point clients to the correct node.

The idea is that all nodes have unique public addresses, and
a common domain name. Thus basic DNS round-robin could be used
to balance requests between nodes, but viewers may be redirected
to a different server if desired. (For example, when trying to view
a stream that is being broadcast from a different node, or when
trying to broadcast through an already overloaded node.)

--- a/templates/room.html
+++ b/templates/room.html
@@ -30,7 +30,7 @@
                 <span class="text"></span>
             </li>
         </template>
-        <article id="content" data-scrollbar data-stream-id="{{.ID}}" data-server="{{.Meta.Server}}">
+        <article id="content" data-scrollbar data-stream-id="{{.ID}}">
             {{ template "nav.html" . }}
             <section class="player-block invert-block">
                 <div class="player{{- if .Meta.HasVideo}} has-video{{end -}}
@@ -38,7 +38,7 @@
                     {{- /* `video` with `height: auto` will always use the default aspect ratio.
                         so instead we enforce the size of this element with an empty image. */}}
                     <svg width="{{or .Meta.Width 853}}" height="{{or .Meta.Height 480}}"></svg>
-                    <video></video><div class="controls">
+                    <video crossorigin></video><div class="controls">
                         <a href="#" class="button mute" title="Mute"></a>
                         <div tabindex="0" class="volume" title="Volume"><div class="slider"></div></div>
                         <div class="status">not connected</div>
