--- a/templates/room.html
+++ b/templates/room.html
@@ -38,7 +38,7 @@
                     {{- /* `video` with `height: auto` will always use the default aspect ratio.
                         so instead we enforce the size of this element with an empty image. */}}
                     <svg width="{{or .Meta.Width 853}}" height="{{or .Meta.Height 480}}"></svg>
-                    <video crossorigin></video><div class="controls">
+                    <video crossorigin="anonymous"></video><div class="controls">
                         <a href="#" class="button mute" title="Mute"></a>
                         <div tabindex="0" class="volume" title="Volume"><div class="slider"></div></div>
                         <div class="status">not connected</div>
