--- a/templates/user-config.html
+++ b/templates/user-config.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/global.css" />
-        <title>webmcast -- user config</title>
+        <title>webmcast // user config</title>
     </head>
     <body>
         <article id="content" data-scrollbar>
