Permit identical logins in chat.
1. the displayed name is not a login anyway, and is not unique.
2. all registered logins are unique, so only anonymous users
   can have non-unique ones, and these are easy to spot by the
   icon. hopefully, that's enough to remove all confusion.
3. it's just easier.

--- a/templates/room.html
+++ b/templates/room.html
@@ -75,7 +75,7 @@
                     {{ if not .Online }}<h2 class="offline">is now offline.</h2>{{ end }}
                 </div>
                 <div>
-                    {{- if .Online }}<h2 class="viewers" title="Viewers">???</h2>{{ end -}}
+                    <h2 class="viewers" title="Viewers">0</h2>
                 </div>
             </section>
             <section class="stream-about center-block">
